补充部分知识